--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,20 @@
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.submit-form .submit-button{
+    margin-top: 18px;
+    margin-left: 10px;
+}
+
+.counter{
+    padding-top: 15px;
+    margin-right: 40px;
+}
+
+.todos-list{
+    max-width: 400px;
+}
+
+.app-container{
+    min-height: 500px;
+    max-width: 400px;
+    padding: 20px;
+    margin-top: 30px;
 }
